--- a/homework.html
+++ b/homework.html
@@ -57,7 +57,7 @@
         </div>
         <div class="col-md-8  d-flex align-items-center">
           <div class="card-body p-5">
-            <h5 class="card-text">Fronted-End Designer</h5>
+            <h5 class="card-text">Front-End Designer</h5>
             <h1 class="card-title">FangYu Hsu</h1>
             <h4 class="card-text mb-5">泰山職訓局</h4>
             <p class="card-text">
